--- a/package.json
+++ b/package.json
@@ -1,26 +1,48 @@
 {
-  "name": "discussion.shirokodev.site",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
-  }
+	"name": "discussion.shirokodev.site",
+	"version": "0.1.0",
+	"private": true,
+	"license": "MIT",
+	"scripts": {
+		"dev:turbo": "next dev --turbo -p 2223",
+		"dev": "next dev -p 2223",
+		"build": "next build",
+		"start": "next start -p 2223",
+		"start:standalone": "bun .next/standalone/server.js",
+		"lint": "next lint",
+		"format": "prettier --write .",
+		"prepare": "husky"
+	},
+	"dependencies": {
+		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-toast": "^1.2.1",
+		"@tabler/icons-react": "^3.11.0",
+		"axios": "^1.7.3",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"daisyui": "^4.12.10",
+		"framer-motion": "^11.3.24",
+		"lucide-react": "^0.424.0",
+		"next": "14.2.5",
+		"next-themes": "^0.3.0",
+		"react": "^18",
+		"react-dom": "^18",
+		"socket.io-client": "^4.7.5",
+		"tailwind-merge": "^2.4.0"
+	},
+	"devDependencies": {
+		"@commitlint/config-conventional": "^19.2.2",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"eslint": "^8",
+		"eslint-config-next": "14.2.5",
+		"husky": "^9.1.4",
+		"lint-staged": "^15.2.8",
+		"postcss": "^8",
+		"prettier": "^3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.5",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5"
+	}
 }
