--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"prepare": "husky"
 	},
 	"dependencies": {
+		"@radix-ui/react-avatar": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-toast": "^1.2.1",
 		"@tabler/icons-react": "^3.11.0",
@@ -27,6 +28,7 @@
 		"next-themes": "^0.3.0",
 		"react": "^18",
 		"react-dom": "^18",
+		"react-icons": "^5.2.1",
 		"socket.io-client": "^4.7.5",
 		"tailwind-merge": "^2.4.0"
 	},
