--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
 		"react": "^18",
 		"react-dom": "^18",
 		"react-icons": "^5.2.1",
+		"react-infinite-scroll-component": "^6.1.0",
 		"socket.io-client": "^4.7.5",
-		"tailwind-merge": "^2.4.0"
+		"tailwind-merge": "^2.4.0",
+		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
 		"@commitlint/config-conventional": "^19.2.2",
